--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -1,23 +1,23 @@
 <div class="note-editor-dialog">
-  <!-- Current Account Display -->
-  <div dialog-content class="dialog-content-wrapper" (dragenter)="onDragEnter($event)" (dragover)="onDragOver($event)"
-    (dragleave)="onDragLeave($event)" (drop)="onDrop($event)" [class.drag-over]="isDragOver()">
-
-    <!-- Account info -->
-    <div class="account-banner">
-      <div class="current-account-info">
-        <div class="current-account-avatar">
-          @if (currentAccountAvatar()) {
-          <img [src]="currentAccountAvatar()" alt="Current account avatar" class="account-avatar-img" />
-          } @else {
-          <mat-icon class="account-avatar-icon">account_circle</mat-icon>
-          }
-        </div>
-        <div class="current-account-details">
-          <span class="current-account-name">{{ currentAccountDisplayName() }}</span>
-        </div>
+  <!-- Account info in header -->
+  <div dialog-header class="account-banner">
+    <div class="current-account-info">
+      <div class="current-account-avatar">
+        @if (currentAccountAvatar()) {
+        <img [src]="currentAccountAvatar()" alt="Current account avatar" class="account-avatar-img" />
+        } @else {
+        <mat-icon class="account-avatar-icon">account_circle</mat-icon>
+        }
+      </div>
+      <div class="current-account-details">
+        <span class="current-account-name">{{ currentAccountDisplayName() }}</span>
       </div>
     </div>
+  </div>
+
+  <!-- Content Area -->
+  <div dialog-content class="dialog-content-wrapper" (dragenter)="onDragEnter($event)" (dragover)="onDragOver($event)"
+    (dragleave)="onDragLeave($event)" (drop)="onDrop($event)" [class.drag-over]="isDragOver()">
 
     <!-- Error display -->
     @if (mediaService.error()) {
@@ -325,7 +325,7 @@
       <button mat-button (click)="cancel()" [disabled]="isPublishing()">Cancel</button>
 
       <button mat-flat-button color="primary" (click)="publishNote()" [disabled]="!canPublish() || isPublishing()"
-        class="publish-button">
+        class="publish-button" matTooltip="Alt+P">
         @if (isPublishing()) {
         <ng-container>
           <mat-icon class="spinning">hourglass_empty</mat-icon>
